# TheCalculatorCpp

./: .gitignore  CMakeLists.txt  README.md  TheCalculator.sln
TheCalculator/: AdvancedCalculator.cpp  AdvancedCalculator.h  AppMenu.cpp  AppMenu.h  Calculator.cpp  Calculator.h  CalculatorInterface.h  Main.cpp  MathInput.cpp  MathInput.h  MathParser.cpp  MathParser.h  TheCalculator.cpp  TheCalculator.vcxproj  TheCalculator.vcxproj.filters  ecuatii.txt  out.txt
src/: main.cpp
src/cli/: CLI.cpp  CLI.h  CommandRouter.cpp  CommandRouter.h  FileIO.cpp  FileIO.h
src/engine/: Calculator.cpp  Calculator.h  VariableStore.cpp  VariableStore.h
src/gui/: CalculatorWindow.cpp  CalculatorWindow.h  main_gui.cpp
src/pipeline/: Evaluator.cpp  Evaluator.h  Parser.cpp  Parser.h  Token.h  Tokenizer.cpp  Tokenizer.h
